--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.30"
-    repositories {
-        google()
-        jcenter()
+    ext {
+        nav_version = "2.3.0-alpha01"
+        kotlin_version = "1.4.30"
+        repositories {
+            google()
+            jcenter()
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
@@ -11,6 +14,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:${nav_version}"
     }
 }
 
@@ -19,6 +23,15 @@ allprojects {
         google()
         jcenter()
     }
+}
+
+ext {
+    appCompatVersion = '1.2.0'
+    androidxCoreVersion = '1.3.2'
+    materialVersion = '1.2.1'
+    constraintLayoutVersion = '2.0.2'
+    lifecycleVersion = '2.2.0'
+    navigationVersion = '2.3.1'
 }
 
 task clean(type: Delete) {
