--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.3KingdomsChess">
-        <activity android:name="com.example.android.threekingdomschess.MainActivity"
+        android:theme="@style/splashScreenTheme">
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="landscape"
 
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
